welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:25: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:31: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:41: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:51: error: not found: value dogHouse
		dogHouse();		
                ^